# IFEM-Elasticity

./: .gitignore  AnalyticSolutions.C  ArcLengthDriver.C  ArcLengthDriver.h  CMakeLists.txt  ElasticBase.C  ElasticBase.h  Elasticity.C  Elasticity.h  ElasticityArgs.C  ElasticityArgs.h  ElasticityUtils.h  IsotropicPropertyMat.C  IsotropicPropertyMat.h  IsotropicTextureMat.C  IsotropicTextureMat.h  KirchhoffLove.C  KirchhoffLove.h  LinIsotropic.C  LinIsotropic.h  LinearElasticity.C  LinearElasticity.h  LocalSystems.C  MaterialBase.C  MaterialBase.h  NLargs.C  NLargs.h  NewmarkDriver.h  NonlinearDriver.C  NonlinearDriver.h  README.md  SIMElasticity.C  SIMElasticity.h  SIMElasticityInstance.h  SIMElasticityWrap.C  SIMElasticityWrap.h  SIMLinEl.h  SIMLinEl2D.C  SIMLinEl3D.C  SIMLinEl3D.h  (+7 more)
Beam/: BeamProperty.C  BeamProperty.h  CMakeLists.txt  ElasticBar.C  ElasticBar.h  ElasticBeam.C  ElasticBeam.h  ElasticCable.C  ElasticCable.h  SIMElastic1D.C  SIMElastic1D.h  SIMElasticBar.C  SIMElasticBar.h  SIMLinElBeam.h
Elasticity/: CMakeLists.txt  ElasticBase.h  Elasticity.C  Elasticity.h  ElasticityArgs.C  IsotropicTextureMat.C  KirchhoffLove.C  KirchhoffLove.h  LinIsotropic.C  LinIsotropic.h  LinearElasticity.C  LocalSystems.C  MaterialBase.h  NewmarkDriver.h  NonlinearDriver.C  NonlinearDriver.h  SIMElasticity.C  SIMElasticity.h  SIMRigid.C  SIMRigid.h
FiniteDeformation/: CMakeLists.txt  DruckerPrager.C  DruckerPrager.h  LinearMaterial.C  LinearMaterial.h  MixedTanMat.C  MixedTanMat.h  MortarContact.C  MortarContact.h  NLoptions.C  NLoptions.h  NeoHookeMaterial.C  NeoHookeMaterial.h  NonlinearElasticity.C  NonlinearElasticity.h  NonlinearElasticityFbar.C  NonlinearElasticityFbar.h  NonlinearElasticityTL.C  NonlinearElasticityTL.h  NonlinearElasticityUL.C  NonlinearElasticityUL.h  NonlinearElasticityULMX.C  NonlinearElasticityULMX.h  NonlinearElasticityULMixed.C  NonlinearElasticityULMixed.h  PlasticMaterial.C  PlasticMaterial.h  RigidBody.C  RigidBody.h  SIMContact.C  SIMContact.h  SIMFiniteDefEl.C  SIMFiniteDefEl.h  SIMLinEl.h  stiff_TL.f
Linear/: AnalyticSolutions.C  AnalyticSolutions.h  CMakeLists.txt  DynamicDriver.C  DynamicSim.h  KirchhoffLove.C  KirchhoffLove.h  KirchhoffLovePlate.C  KirchhoffLovePlate.h  KirchhoffLoveShell.C  KirchhoffLoveShell.h  LinearElasticity.C  LinearElasticity.h  ModalDriver.C  ModalDriver.h  ModalSim.h  MultiLoadCaseDriver.C  MultiLoadCaseSim.h  SIMLinEl.h  SIMLinEl2D.C  SIMLinEl3D.C  SIMLinElBeamC1.C  SIMLinElBeamC1.h  SIMLinElKL.C  SIMLinElKL.h  SIMLinElModal.h  SIMLinElSup.C  SIMLinElSup.h  SIMLinKLModal.C  SIMLinKLModal.h  SIMmcStatic.C  SIMmcStatic.h  main_LinEl.C  main_LinEl3D.C
Linear/Test/: 0445-properties.csv  Annulus2D.reg  Annulus2D.xinp  Annulus3D.reg  Annulus3D.vreg  Annulus3D.xinp  AnnulusWithTemp2D.reg  AnnulusWithTemp2D.xinp  Beam+KLcyl-p3.reg  Beam+KLcyl-p3.xinp  Beam+Uprofil-p2.reg  Beam+Uprofil-p2.xinp  Beam+supel.reg  BeamFrame.reg  Biharmonic1D-p3.reg  Biharmonic1D-p3.xinp  Bolt.reg  Bolt.xinp  Bridge-p2.reg  Bridge-p2.xinp  CanTS2D-fields-p2.reg  CanTS2D-fields-p2.xinp  CanTS2D-p1.reg  CanTS2D-p1.xinp  CanTS2D-p2-dmp.reg  CanTS2D-p2-dmp.xinp  CanTS2D-p2-dyn.reg  CanTS2D-p2-dyn.xinp  CanTS2D-p2-dynamic.reg  CanTS2D-p2-qstat.reg  CanTS2D-p2-restart.reg  CanTS2D-p2.reg  CanTS2D-p2.xinp  CanTS2D-p3.reg  CanTS2D-p3.xinp  CanTS2D-refsol.hdf5  CanTS2D-refsol.xml  Cantilever-Cable3p.reg  Cantilever-Cable3p.xinp  Cantilever-KLplate.reg  (+147 more)
Linear/Test/LR/: CanTS2D-p1-VCPs.reg  CanTS2D-p1-VCPs.xinp  CanTS2D-p1.reg  CanTS2D-p1.xinp  Cantilever-KLshell.reg  Cantilever-KLshell.xinp  Lshape-adap-p2.hreg  Lshape-adap-p2.xinp  NavierIcrack_p2-adap.reg  NavierIcrack_p2-adap.vreg  NavierIcrack_p2.reg  NavierIcrack_p2.xinp  PointLoadedPlate+project.reg  PointLoadedPlate+project.xinp  PointLoadedPlate-NURBS.reg  PointLoadedPlate-adap.reg  PointLoadedPlate-adap.xinp  ScordelisPoint-NURBS.reg  coarse.lr  disc-stair-adap.reg  disc-stair-adap.xinp  exact_p2.reg  exact_p2.xinp  stretch-p1.reg
Linear/Test/SPR/: Annulus3D.reg  Beam+KLcyl-p3.reg  Beam+Uprofil-p2.reg  Beam+supel.reg  BeamFrame.reg  Biharmonic1D-p3.reg  CanTD2D-p1.reg  CanTS2D-p2-dmp.reg  CanTS2D-p2-qstat.reg  CanTS2D-p2-restart.reg  Cantilever-KLplate.reg  Cantilever-KLshell.reg  Cylinder-Axisymm.reg  Cylinder-Spectral.reg  EBbeam+KLplate-p2.reg  Harmonic1D-p3.reg  Hole2D-Lagrange.reg  Hole2D-NURBS.reg  Hole2D-Spectral.reg  Hole2D-immS2-p1.reg  L1-50x50-m.reg  L1-50x50.m  MaterialExpression.reg  MaterialImage.reg  MidShipFrame.reg  NREL_5MW_blade-vibration.reg  NavierPart_p2.reg  NavierUload_p2.reg  NavierUload_p3.reg  PLplate-projBasis.g2  PinchedHemisphere-p4.reg  PipeJoint-Lagrange.reg  PipeJoint-NURBS.reg  PlateLineLoad.reg  PlateWithColumns_p2.reg  PointLoadedPlate-project-file.reg  PointLoadedPlate-project.reg  PolePinchedSphere-p3.reg  PolePinchedSphere-p3.xinp  README.md  (+28 more)
Linear/doc/: Doxyfile.in  LinEl.dox.in
Shell/: CMakeLists.txt  KirchhoffLoveShell.C  KirchhoffLoveShell.h  NLKirchhoffLoveShell.C  NLKirchhoffLoveShell.h  SIMKLShell.C  SIMKLShell.h  SIMShell.C  SIMShell.h  main.C
Shell/Test/: Cantilever-p2-1x1.reg  Cantilever-p3-10x1.reg  Cantilever-p3-10x1.xinp  Cantilever-p3-restart.reg  HingedShallowArch-p2.reg  HingedShallowArch-p2.xinp  HingedShallowArch-press.reg  PinchedHemisphere-p4.reg  PinchedHemisphere-p4.vreg  PinchedHemisphere-p4.xinp  PolePinchedSphere_p2.reg  PolePinchedSphere_p2.xinp  hemisphere-symmZ.g2  hemisphere72.g2  shallow_arch.py
Shell/doc/: Doxyfile.in  ShellEl.dox.in
Test/: log2reg.sh
Test/Linear/: Annulus3D.xinp  AnnulusWithTemp2D.reg  AnnulusWithTemp2D.xinp  Beam+supel.xinp  BeamFrame.reg  BeamFrame.xinp  CanTD2D-p1.reg  CanTD2D-p1.xinp  CanTS2D-fields-p2.reg  CanTS2D-p1-dual.vreg  CanTS2D-p1.xinp  CanTS2D-p2-dmp.xinp  CanTS2D-p2-qstat.reg  CanTS2D-p2.reg  CanTS2D-p2.xinp  CanTS2D-p3.reg  CanTS2D-refsol.hdf5  Cantilever-Cable3p.reg  Cantilever-KLshell.xinp  Cylinder-Axisymm.xinp  Cylinder-Lagrange.reg  Cylinder-NURBS.reg  Cylinder-Spectral.reg  Cylinder-p4.xinp  L1-50x50.m  (+94 more)
doc/: Doxyfile.in  Elasticity.dox.in  LinEl.dox.in
jenkins/: build.sh
(+151 files in other folders)
